# ChessEngine

./: .gitignore
engine/: CMakeLists.txt  README.md
engine/src/: board.cpp  board.h  interface.cpp  interface.h  make.cpp  make.h  move.cpp  move.h  movegen.cpp  movegen.h
engine/test/: board.cpp  movegen.cpp
engine/uci/: interface.cpp
